Summer Update - bug fixing and Marsh World

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Mundo Petrificado"
  pc_pd_petrified_desc: "Mundo rochoso com atmosfera de nitrogênio-oxigênio com hidrosfera ativa e estável. Grandes massas de terra são separadas por oceanos, com grandes variações climáticas. Devido ao efeito de uma inundação planetária após uma era glacial, restos petrificados de árvores gigantes podem ser encontrados tanto na superfície quanto enterrados no solo."
  pc_pd_petrified_adj: "petrificado"
