--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_modifiers_l_braz_por.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "Mundo Megaflora"
  pd_megaflora_desc: "A colossal flora arbórea deste mundo cobre a superfície, com extensas raízes que se estendem por quilômetros abaixo. Navegar pelo planeta diante desta vegetação rara apresenta desafios significativos."
  pd_petrified: "Mundo Petrificado"
