--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -44,6 +44,12 @@ trait_pc_pd_temperate_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_petrified: "Monde de Bois Pétrifiés"
 pc_pd_petrified_desc: "Monde rocheux avec une atmosphère à base d'azote et d'oxygène avec une hydrosphère active et stable. Les vastes masses terrestres sont séparées par des océans, avec de grandes variations climatiques. En raison de l'effet d'un déluge planétaire après une ère glaciaire, des restes pétrifiés de géants arbres peuvent être trouvés à la fois à la surface et enterrés dans le sol."
 pc_pd_petrified_adj: "pétrifié"
