--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -20,6 +20,8 @@ pd_temperate_desc: "Un climat doux et une riche biodiversité font de cette plan
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
 pd_megaflora: "Monde de la Mégafloraison"
 pd_megaflora_desc: "Le dense monde de la mégafloraison regorge de plantes gigantesques dont les racines souvent déterrent des dépôts précieux, et produisent également une sève riche en énergie à utiliser. Construire autour de la mégafloraison signifie que les coûts de construction sont plus élevés que la normale."
 pd_petrified: "Monde des Bois Pétrifiés"
