--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Versteinerter Wald Welt"
  pc_pd_petrified_desc: "Felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre und einer aktiven und stabilen Hydrosphäre. Große Landmassen sind durch Ozeane getrennt und weisen große Klimaschwankungen auf. Aufgrund der Auswirkungen einer planetenweiten Flut nach einer Eiszeit können versteinerte Überreste riesiger Bäume sowohl auf der Oberfläche als auch im Boden vergraben gefunden werden."
  pc_pd_petrified_adj: "versteinert"
