--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Bedeutende Landmassen, getrennt durch Ozeane und üppige Wälder mit wunderschön blühenden Bäumen bedecken die Oberfläche."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "Megaflora Welt"
  pd_megaflora_desc: "Die riesige baumartige Flora dieser Welt bedeckt die Oberfläche und ihre langen Wurzeln reichen kilometerweit in die Tiefe. Das Navigieren der Baumannschaften um diese seltene Vegetation herum stellt eine große Herausforderung dar."
  pd_petrified: "Versteinerter Wald Welt"
