--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "규화목 행성"
  pc_pd_petrified_desc: "대기가 질소와 산소로 조성된 암석형 행성입니다. 매우 활동적이고 안정적인 수권이 존재합니다. 거대한 대륙은 바다로 분리되어 있으며 기후 변화가 큽니다. 빙하기 이후 전 행성적인 홍수의 영향으로 거대한 규화목이 지표면과 땅속에 묻혀 있는 것을 볼 수 있습니다."
  pc_pd_petrified_adj: "규화된"
