--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_modifiers_l_korean.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "거대식물 행성"
  pd_megaflora_desc: "이 행성의 거대한 나무와 같은 식물이 표면을 뒤덮고 있으며, 뿌리는 수 마일 아래까지 뻗어 있습니다. 이 희귀한 식생 주변의 건설 지형을 탐색하는 것은 상당한 도전 과제입니다."
  pd_petrified: "규화목 행성"
