--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "Świat megafloryczny"
  pd_megaflora_desc: "Ogromna, drzewiasta flora tego świata pokrywa powierzchnię, a rozległe korzenie sięgają mil pod nią. Poruszanie się po terenie budowlanym wokół tej rzadkiej roślinności stwarza poważne wyzwania."
  pd_petrified: "Świat skamieniałych lasów"
