--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Мир окаменелых лесов"
  pc_pd_petrified_desc: "Каменистый мир с азотно-кислородной атмосферой и активной и стабильной гидросферой. Огромные материки разделены океанами, а климат сильно варьируется. Из-за последствий планетарного потопа после ледникового периода окаменелые останки гигантских деревьев можно найти как на поверхности, так и погребенными в земле."
  pc_pd_petrified_adj: "окаменелая"
