--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_modifiers_l_russian.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Крупные участки суши разделены океанами, поверхность покрывают пышные, вечно цветущие леса."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "Мир мегафлоры"
  pd_megaflora_desc: "Эта планета является домом для гигантской мегафлоры, которая покрывает поверхность планеты. При строительстве вокруг этой редкой растительности возникают серьезные проблемы."
  pd_petrified: "Мир окаменелых лесов"
