--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -680,6 +680,12 @@
  mod_pc_pd_moss_habitability: "陆地星球宜居性"
  trait_pc_pd_moss_preference: "陆地星球偏好"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_ironsand: "铁砂星球"
  pc_pd_ironsand_desc: "该沙漠星球有极为丰富的铁元素沉积，形成了氧化铁构成的浅红沙子，与富含未氧化矿物的暗色岩石。"
  pc_pd_ironsand_adj: "砂砾"
