--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -262,6 +262,8 @@
  pd_calcite_desc: "$pc_pd_calcite_desc$"
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_ironsand: "$pc_pd_ironsand$"
  pd_ironsand_desc: "$pc_pd_ironsand_desc$"
  pd_cactus: "$pc_pd_cactus$"
