--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Petrified Woods World"
  pc_pd_petrified_desc: "Rocky world with a nitrogen-oxygen atmosphere with an active and stable hydrosphere. Great landmasses are separated by oceans, with large climate variations. Due to the effect of a planetwide flood after an ice age, petrified remains of giant trees can be found both on the surface and buried in the ground."
  pc_pd_petrified_adj: "petrified"
