--- a/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_engine_events_l_french.yml
@@ -9,8 +9,9 @@
  pdengine.21.forest: "$pc_pd_forest$"
  pdengine.21.tepid: "$pc_pd_tepid$"
  pdengine.21.temperate: "$pc_pd_temperate$"
-  pdengine.21.sakura: "$pc_pd_sakura$"
+ pdengine.21.sakura: "$pc_pd_sakura$"
  pdengine.21.moss: "$pc_pd_moss$"
+ pdengine.21.marsh: "$pc_pd_marsh$"
  pdengine.21.mushroom: "$pc_pd_mushroom$"
  pdengine.21.megaflora: "$pc_pd_megaflora$"
  pdengine.21.petrified: "$pc_pd_petrified$"
