--- a/planetary_diversity/localisation/japanese/planetarydiversity_engine_events_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_engine_events_l_japanese.yml
@@ -11,6 +11,7 @@
  pdengine.21.temperate: "$pc_pd_temperate$"
  pdengine.21.sakura: "$pc_pd_sakura$"
  pdengine.21.moss: "$pc_pd_moss$"
+ pdengine.21.marsh: "$pc_pd_marsh$"
  pdengine.21.mushroom: "$pc_pd_mushroom$"
  pdengine.21.megaflora: "$pc_pd_megaflora$"
  pdengine.21.petrified: "$pc_pd_petrified$"
