--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -43,6 +43,12 @@
  mod_pc_pd_moss_habitability: "Continental Habitability"
  trait_pc_pd_moss_preference: "Continental Preference"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "Marsh World"
+ pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
+ pc_pd_marsh_adj: "marshy"
+ mod_pc_pd_marsh_habitability: "Continental Habitability"
+ trait_pc_pd_marsh_preference: "Continental Preference"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_petrified: "Świat skamieniałych lasów"
  pc_pd_petrified_desc: "Skalisty świat z atmosferą azotowo-tlenową z aktywną i stabilną hydrosferą. Wielkie masy lądowe oddzielone są oceanami i charakteryzują się dużymi wahaniami klimatycznymi. W wyniku powodzi obejmującej całą planetę po epoce lodowcowej, skamieniałe pozostałości gigantycznych drzew można znaleźć zarówno na powierzchni, jak i zakopane w ziemi."
  pc_pd_petrified_adj: "skamieniały"
