--- a/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
+++ b/planetary_diversity/localisation/spanish/planetarydiversity_planet_modifiers_l_spanish.yml
@@ -20,6 +20,8 @@
  pd_sakura_desc: "Significant landmasses, separated by oceans and lush forests of beautiful flowering trees cover the surface."
  pd_moss: "$pc_pd_moss$"
  pd_moss_desc: "$pc_pd_moss_desc$"
+ pd_marsh: "$pc_pd_marsh$"
+ pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_megaflora: "Megaflora World"
  pd_megaflora_desc: "This world's colossal tree-like flora drapes the surface, with extensive roots reaching for miles beneath. Navigating the construction landscape around this rare vegetation presents significant challenges."
  pd_petrified: "Petrified Woods World"
