Summer Update - bug fixing and 2 new planets

--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -441,6 +441,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Mundo Glaciovulcânico"
  pc_pd_glaciovolcanic_desc: "Mundo montanhoso e congelado com uma atmosfera de nitrogênio-oxigênio, este planeta tem altos níveis de atividade vulcânica. Isto resulta em grandes lagos aquecidos geotérmicos que cobrem a superfície, o que traz minerais raros e energia para a superfície congelada."
  pc_pd_glaciovolcanic_adj: "vulcânico"
