--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -453,6 +453,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Glaciovolcanic World"
  pc_pd_glaciovolcanic_desc: "Mountainous, frozen world with a nitrogen-oxygen atmosphere, this planet has high levels of volcanic activity.  This results in large geothermal warmed lakes that cover the surface, which bring rare minerals and energy to the otherwise frozen surface."
  pc_pd_glaciovolcanic_adj: "volcanic"
