--- a/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_classes_l_french.yml
@@ -450,6 +450,11 @@ trait_pc_pd_blossom_preference_desc: "$trait_pc_arctic_preference_desc$"
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
 pc_pd_glaciovolcanic: "Monde Glaciovolcanique"
 pc_pd_glaciovolcanic_desc: "Monde montagneux et gelé avec une atmosphère azote-oxygène, cette planète connaît des niveaux élevés d'activité volcanique. Cela résulte en de grands lacs réchauffés géothermiquement qui recouvrent la surface, apportant des minéraux rares et de l'énergie à la surface sinon gelée."
 pc_pd_glaciovolcanic_adj: "volcanique"
