--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -453,6 +453,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "화산성 빙하 행성"
  pc_pd_glaciovolcanic_desc: "대기가 질소와 산소로 조성된 산이 많은 얼어붙은 행성입니다. 이 행성은 화산 활동이 활발합니다.  이로 인해 지표면을 덮고 있는 지열로 따뜻해진 거대한 호수가 생겨서 얼어붙은 지표면에 희귀한 광물과 에너지를 공급합니다."
  pc_pd_glaciovolcanic_adj: "화산성"
