--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -453,6 +453,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Świat glaciowulkaniczny"
  pc_pd_glaciovolcanic_desc: "Górzysty, zamarznięty świat z atmosferą azotowo-tlenową, planeta ta charakteryzuje się wysokim poziomem aktywności wulkanicznej. W rezultacie na powierzchni powstają duże, ogrzewane geotermalnie jeziora, które dostarczają rzadkie minerały i energię na zamarzniętą powierzchnię."
  pc_pd_glaciovolcanic_adj: "wulkaniczny"
