--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -117,4 +117,5 @@
  pdengine.21.cactus: "$pc_pd_cactus$"
  pdengine.21.columnar: "$pc_pd_columnar$"
  pdengine.21.taiga: "$pc_pd_taiga$"
+ pdengine.21.craton: "$pc_pd_craton$"
  pdengine.21.treeline: "$pc_pd_treeline$"
