--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -710,6 +710,11 @@
  mod_pc_pd_taiga_habitability: "高山星球宜居性"
  trait_pc_pd_taiga_preference: "高山星球偏好"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_treeline: "林线星球"
  pc_pd_treeline_desc: "拥有氮氧大气的寒冷岩石星球，除去赤道周围繁盛的森林生态系统外，大部分地表都是荒芜的冰原。"
  pc_pd_treeline_adj: "严寒"
