--- a/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
+++ b/planetary_diversity/localisation/french/planetarydiversity_planet_modifiers_l_french.yml
@@ -179,6 +179,8 @@ pd_blossom: "Monde Fleuri"
 pd_blossom_desc: "Les riches prairies de cette planète sont ornées d'une flore fleurie et vibrante, offrant un spectacle visible depuis l'orbite."
  pd_taiga: "$pc_pd_taiga$"
  pd_taiga_desc: "$pc_pd_taiga_desc$"
+ pd_craton: "$pc_pd_craton$"
+ pd_craton_desc: "$pc_pd_craton_desc$"
 pd_glaciovolcanic: "Monde Glaciovolcanique"
 pd_glaciovolcanic_desc: "Cette planète présente un niveau élevé d'activité volcanique. Cela se traduit par de grands lacs chauffés par géothermie qui recouvrent la surface, apportant des minéraux rares et de l'énergie à la surface sinon gelée."
 pd_lanthanide: "Monde de Lanthanides"
