--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -453,6 +453,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Gletschervulkanische Welt"
  pc_pd_glaciovolcanic_desc: "Gebirgige, gefrorene Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Dieser Planet weist eine hohe vulkanische Aktivität auf. Dies führt zu großen geothermisch erwärmten Seen, die die Oberfläche bedecken und seltene Mineralien und Energie an die sonst gefrorene Oberfläche bringen."
  pc_pd_glaciovolcanic_adj: "vulkanisch"
