--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_modifiers_l_japanese.yml
@@ -178,6 +178,8 @@
  pd_blossom_desc: "This planet's rich grasslands are adorned with vibrant flowering flora, presenting a spectacle visible from orbit."
  pd_taiga: "$pc_pd_taiga$"
  pd_taiga_desc: "$pc_pd_taiga_desc$"
+ pd_craton: "$pc_pd_craton$"
+ pd_craton_desc: "$pc_pd_craton_desc$"
  pd_glaciovolcanic: "Glaciovolcanic World"
  pd_glaciovolcanic_desc: "This planet undergoes intense volcanic activity, resulting in numerous geothermal-warmed lakes that bring rare minerals and energy to an otherwise frozen landscape."
  pd_lanthanide: "Lanthanide World"
