--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -453,6 +453,11 @@
  mod_pc_pd_taiga_habitability: "Alpine Habitability"
  trait_pc_pd_taiga_preference: "Alpine Preference"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "Craton World"
+ pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
+ mod_pc_pd_craton_habitability: "Alpine Habitability"
+ trait_pc_pd_craton_preference: "Alpine Preference"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_glaciovolcanic: "Ледниково-вулканический мир"
  pc_pd_glaciovolcanic_desc: "Гористый, замерзший мир с азотно-кислородной атмосферой. Если бы не высокий уровень вулканической активности этой планеты, она была бы ледниковым миром, но вместо этого многочисленные вулканы создают горячие озера, в которых обитает выносливая жизнь."
  pc_pd_glaciovolcanic_adj: "ледо-вулканическая"
