--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -272,5 +272,7 @@
  pd_columnar_desc: "$pc_pd_columnar_desc$"
  pd_taiga: "$pc_pd_taiga$"
  pd_taiga_desc: "$pc_pd_taiga_desc$"
+ pd_craton: "$pc_pd_craton$"
+ pd_craton_desc: "$pc_pd_craton_desc$"
  pd_treeline: "$pc_pd_treeline$"
  pd_treeline_desc: "$pc_pd_treeline_desc$"
