--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -680,12 +680,6 @@
  mod_pc_pd_moss_habitability: "陆地星球宜居性"
  trait_pc_pd_moss_preference: "陆地星球偏好"
  trait_pc_pd_moss_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_marsh: "Marsh World"
- pc_pd_marsh_desc: "Dense temperate salt marshes blanket the planet's surface. Brackish pools stretch across the horizon, where fibrous vegetation filters runoff and anchors the soil."
- pc_pd_marsh_adj: "marshy"
- mod_pc_pd_marsh_habitability: "Continental Habitability"
- trait_pc_pd_marsh_preference: "Continental Preference"
- trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_ironsand: "铁砂星球"
  pc_pd_ironsand_desc: "该沙漠星球有极为丰富的铁元素沉积，形成了氧化铁构成的浅红沙子，与富含未氧化矿物的暗色岩石。"
  pc_pd_ironsand_adj: "砂砾"
@@ -710,14 +704,20 @@
  mod_pc_pd_taiga_habitability: "高山星球宜居性"
  trait_pc_pd_taiga_preference: "高山星球偏好"
  trait_pc_pd_taiga_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_craton: "Craton World"
- pc_pd_craton_desc: "With its nitrogen-oxygen atmosphere, this geologically stable world features broad regions of ancient bedrock, craton basins nestled within a sluggishly shifting lithosphere."
- mod_pc_pd_craton_habitability: "Alpine Habitability"
- trait_pc_pd_craton_preference: "Alpine Preference"
- trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_treeline: "林线星球"
  pc_pd_treeline_desc: "拥有氮氧大气的寒冷岩石星球，除去赤道周围繁盛的森林生态系统外，大部分地表都是荒芜的冰原。"
  pc_pd_treeline_adj: "严寒"
  mod_pc_pd_treeline_habitability: "苔原星球宜居性"
  trait_pc_pd_treeline_preference: "苔原星球偏好"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_marsh: "沼泽星球（草沼）"
+ pc_pd_marsh_desc: "稠密的温和盐沼覆盖着整个星球表面。咸水塘一直延伸至天际，其中的纤维质植被可以过滤径流并固持土壤。"
+ pc_pd_marsh_adj: "沼泽"
+ mod_pc_pd_marsh_habitability: "陆地星球宜居性"
+ trait_pc_pd_marsh_preference: "陆地星球偏好"
+ trait_pc_pd_marsh_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_craton: "克拉通星球"
+ pc_pd_craton_desc: "这颗行星拥有氮氧大气层，地质构造稳定，地表分布着广袤的古老基岩，克拉通盆地镶嵌在缓慢变化的岩石圈中。"
+ mod_pc_pd_craton_habitability: "高山星球宜居性"
+ trait_pc_pd_craton_preference: "高山星球偏好"
+ trait_pc_pd_craton_preference_desc: "$trait_pc_arctic_preference_desc$"
